feat(language): serve syntax verdicts from bundled Python extensions
The write gate carried its own tree-sitter parser and the TUI a
tree-sitter highlighter. Both are gone: syntax is an extension concern
now. Three bundled extensions live in resources/vis-extensions, are
materialized into ~/.vis/extensions-bundled and are scanned before the
user and project directories, so a file of the same name replaces one.

A language no surface claims, or whose handler throws or breaks the
result contract, is unguarded: a write is never refused on a verdict Vis
cannot trust. Formatting, linting, tests, the REPL and delimiter repair
stay with the JVM language packs.

Vis-Session: f2cfccd5-3acd-4bb8-ad08-6fc522941498